<resources>
    <string name="app_name">Simon Says</string>
    <string name="action_settings">Settings</string>
    <string name="play_text">PLAY</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="start_Diff_Text">Starting Difficulty:</string>
    <string name="start_Lvl_Text">Starting Level:</string>
    <string name="start_Lvl_Num">0</string>
    <string name="mode_text">Mode:</string>
    <string name="norm_Text">Normal</string>
    <string name="double_Text">Double Trouble</string>
    <string name="highscore">\t\t\tHighscore:\t</string>
    <string name="currScore">Current Score:\t</string>
    <string name="currScoreNum">0</string>
    <string name="highscoreNum">0</string>
    <string name="lives">\t\t\tLives:\t</string>
    <string name="livesNum">0</string>
    <string name="gameOver"></string>

    <string-array name="difficulties">
        <item>EASY</item>
        <item>HARD</item>
    </string-array>

</resources>
